Add divs for each section of webpage

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  
+
   <body>
-    
+    <div class="container">
+      <nav class="navigation">
+        Navigation
+      </nav>
+
+      <div class="header-section">
+        Header
+      </div>
+
+      <div class="features-section">
+        Features
+      </div>
+
+      <div class="quote-section">
+        Quote
+      </div>
+
+      <div class="action-section">
+        Call to action!
+      </div>
+
+      <footer class="footer">
+        Footer
+      </footer>
+    </div>
   </body>
 </html>
