--- a/index.html
+++ b/index.html
@@ -9,69 +9,81 @@
   </head>
 
   <body>
-    <div class="container">
-      <nav class="navigation">
+    <nav class="navigation container"> 
+      <div class="content-wide">
         <h3>Header Logo</h3>
         <ul class="nav-links">
           <li>header link one</li>
           <li>header link two</li>
           <li>header link three</li>
         </ul>
-      </nav>
-
-      <div class="header-section">
-        <div class="header-content">
-          <h1>This website is awesome</h1>
-          <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
-          <button type="button">Sign up</button>
-        </div>
-        <div class="header-image">      <!-- Temporary, remove later -->
-          <img src="images/kitten.jpg" alt="Cute kitten" width="200px" height="auto">
-        </div>
       </div>
+    </nav>
 
-      <div class="features-section">
-        <h2>Some random information.</h2>
-        <div class="images-container">
-          <div class="features-images">
-            <img src="#" alt="Another cute kitten">
-            <p>This is some subtext under an illustration or image</p>
+    <div class="main-content">
+      <div class="header container">
+        <div class="content-wide">
+          <div class="header-text">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button type="button">Sign up</button>
           </div>
-          <div class="features-images">
-            <img src="#" alt="Another cute kitten">
-            <p>This is some subtext under an illustration or image</p>
-          </div>
-          <div class="features-images">
-            <img src="#" alt="Another cute kitten">
-            <p>This is some subtext under an illustration or image</p>
-          </div>
-          <div class="features-images">
-            <img src="#" alt="Another cute kitten">
-            <p>This is some subtext under an illustration or image</p>
+          <div class="header-image">      <!-- Temporary, remove later -->
+            <img src="images/kitten.jpg" alt="Cute kitten">
           </div>
         </div>
       </div>
 
-      <div class="quote-section">
-        <p class="quote-content">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </p>
-        <p class="quote-author">- Thor, God of Thunder</p>
-      </div>
-
-      <div class="action-section">
-        <div class="action-subcontainer">
-          <div class="left">
-            <h4>Call to action! It's time!</h4>
-            <p>Sign up for our product by clicking that button right over there!</p>
-          </div>
-          <div class="right">
-            <button>Sign up</button>
+      <div class="features container">
+        <div class="content-narrow">
+          <h2>Some random information.</h2>
+          <div class="images-container">
+            <div class="features-images">
+              <img src="#" alt="Another cute kitten">
+              <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="features-images">
+              <img src="#" alt="Another cute kitten">
+              <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="features-images">
+              <img src="#" alt="Another cute kitten">
+              <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="features-images">
+              <img src="#" alt="Another cute kitten">
+              <p>This is some subtext under an illustration or image</p>
+            </div>
           </div>
         </div>
       </div>
 
-      <footer class="footer">
-        <p>Copyright © The Odin Project 2021</p>
-      </footer>
+      <div class="quote-section container">
+        <div class="content-narrow">
+          <p class="quote-content">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </p>
+          <p class="quote-author">- Thor, God of Thunder</p>
+        </div>
+      </div>
+
+      <div class="action container">
+        <div class="content-wide">
+          <div class="action-subcontainer">
+            <div class="left">
+              <h4>Call to action! It's time!</h4>
+              <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="right">
+              <button>Sign up</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <footer class="footer container">
+      <div class="content-wide">
+        <p>Copyright © The Odin Project 2021</p>
+      </div>
+    </footer>
   </body>
 </html>
