Style information section and add images

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
           <h2>Some random information.</h2>
           <div class="images-container">
             <div class="features-images">
-              <img src="#" alt="Another cute kitten">
+              <img src="images/featured-images/kitten1.jpg" alt="Another cute kitten">
               <p>This is some subtext under an illustration or image</p>
             </div>
             <div class="features-images">
-              <img src="#" alt="Another cute kitten">
+              <img src="images/featured-images/kitten2.jpg" alt="Another cute kitten">
               <p>This is some subtext under an illustration or image</p>
             </div>
             <div class="features-images">
-              <img src="#" alt="Another cute kitten">
+              <img src="images/featured-images/kitten3.jpg" alt="Another cute kitten">
               <p>This is some subtext under an illustration or image</p>
             </div>
             <div class="features-images">
-              <img src="#" alt="Another cute kitten">
+              <img src="images/featured-images/kitten4.jpg" alt="Another cute kitten">
               <p>This is some subtext under an illustration or image</p>
             </div>
           </div>
