--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <div class="action container">
         <div class="content-wide">
-          <div class="action-subcontainer">
+          <div class="action-box">
             <div class="left">
               <h4>Call to action! It's time!</h4>
               <p>Sign up for our product by clicking that button right over there!</p>
