Add links to header list

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <div class="content-wide">
         <h3>Header Logo</h3>
         <ul class="nav-links">
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
         </ul>
       </div>
     </nav>
